# ai-doc-generator

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_e2e_single_section.py  test_markdown_conversion.py  test_report_generation.py
.github/workflows/: ci.yml
alembic/: env.py
doc/: API.md  ARCHITECTURE.md  PLAN.md  PYTHON_DOCX.md  REQUIREMENTS.md  SECURITY.md  TESTING.md
examples/: Markdown_Conversion_Test.docx  image_generation_example.py
monitoring/: prometheus.yml
src/agents/: base_agent.py  content_writer_agent.py  document_structure_agent.py  image_generation_agent.py  orchestrator_agent.py  web_research_agent.py
src/ai_doc_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/auth/: __init__.py  auth.py  dependencies.py  jwt.py  routes.py  schemas.py
src/database/: __init__.py  base.py  models.py
src/models/: report.py
src/monitoring/: __init__.py  metrics.py
src/routers/: __init__.py  reports.py  status.py  users.py  websockets.py
src/tasks/: __init__.py  report_tasks.py  worker.py
src/websockets/: __init__.py  manager.py
tests/: README.md  conftest.py  test_content_writer_agent.py  test_document_structure_agent.py  test_image_generation.py  test_image_generation_agent.py  test_main.py  test_report_tasks.py
